# School-42

fdf/: Makefile  draw_line.c  draw_line_x.c  draw_map.c  fdf.c  fdf.h  ft_realloc.c  key_control.c  main.c  read_file.c  read_map.c  rotate.c
fillit/: Makefile  author  create_map.c  delete_row.c  expand_map.c  fillit.c  fillit.h  fillmap.c  fillmap2.c  force.c  ft_delete_fig.c  ft_free.c  insert_fig.c  insert_matrix.c  link_hash.c  print_map.c  stack.c  store_fig.c  validation.c
fillit/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_memalloc.c  ft_putendl.c  ft_putstr.c  ft_strcpy.c  ft_strjoin.c  ft_strncpy.c  ft_strndup.c  ft_strnew.c  ft_strsplit.c  ft_strtrim.c  ft_toupper.c  get_next_line.c  libft.h
fractol/: CMakeLists.txt  Makefile  create_cl.c  fractol.h  kernel.cl  main.c  mouse_control.c
get_next_line/: get_next_line.c  get_next_line.h
lastfdf/: Makefile  draw_line.c  draw_map.c  fdf.h  main.c  read_map.c
lastfdf/libft/: get_next_line.c  get_next_line.h
lastlastfdf/: Makefile  draw_line.c  draw_map.c  fdf.h  help.c  main.c
libft/: Makefile  libft.h
libft/includes/: libft.h
libft/src/: ft_atof.c
newfdf/: CMakeLists.txt  Makefile  draw_line.c  draw_map.c  fdf.h  main.c  read_map.c
newfdf/libft/: libft.h
